--- a/views/mainScreen.pug
+++ b/views/mainScreen.pug
@@ -1,23 +1,35 @@
 extends layout
 
-block content
-    h1= title
-    p Welcome to #{title}
-    extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  .row
-   .row.pl-4
-   .card.shadow.mb-4
-    .card-header.py-3
-      h6.m-0.font-weight-bold.text-primary Attendance for Event 0
-    .card-body
-      .chart-bar
-        canvas#myBarChart
-      //- hr
-      //- |                     Styling for the bar chart can be found in the 
-      //- code /js/demo/chart-bar-demo.js
-      //- |  file.
+   script(src='/js/barChart.js')
+
+   .container-fluid
+    .row
+        .col-3
+            i.far.fa-plus-square.fa-3x
+        .col-6
+            .card.shadow.mb-4
+                .card-header.py-3
+                    h6.m-0.font-weight-bold.text-primary Bar Chart
+                .card-body
+                    .chart-bar
+                        canvas#myBarChart
+        .col-3
+            i.fas.fa-sign-out-alt.fa-3x.float-right
+
+    ul.list-group
+        li.list-group-item.active Event 1
+            col-1.float-right Edit
+        each val in [2, 3, 4, 5, 6]
+            li.list-group-item Event val
+                .col-1.float-right Edit
+    //- ul.list-group
+    //-     li.list-group-item.active Event 1
+    //-         .col-1.float-right Edit
+    //-     li.list-group-item Event 2
+    //-         .col-1.float-right Edit
+    //-     li.list-group-item Event 3
+    //-         .col-1.float-right Edit
+    .row.pb-3
 
