--- a/views/mainScreen.pug
+++ b/views/mainScreen.pug
@@ -2,34 +2,41 @@ extends layout
 
 
 block content
-   script(src='/js/barChart.js')
+    link(href='css/mdb.min.css', rel='stylesheet')
+    //- script(src='/js/lineChart.js')
+    //- script(src='/js/Chart.bundle.js')
+    .container-fluid
+        .row
+            .col-3
+                i.far.fa-plus-square.fa-3x
+            .col-6
+                .card.shadow.mb-4
+                    .card-header.py-3
+                        h6.m-0.font-weight-bold.text-primary Bar Chart
+                    .card-body
+                        .chart-bar
+                            canvas#scatterChart
+            .col-3
+                i.fas.fa-sign-out-alt.fa-3x.float-right
 
-   .container-fluid
-    .row
-        .col-3
-            i.far.fa-plus-square.fa-3x
-        .col-6
-            .card.shadow.mb-4
-                .card-header.py-3
-                    h6.m-0.font-weight-bold.text-primary Bar Chart
-                .card-body
-                    .chart-bar
-                        canvas#myBarChart
-        .col-3
-            i.fas.fa-sign-out-alt.fa-3x.float-right
+        ul.list-group
+            li.list-group-item.active Event 1
+                col-1.float-right Edit
+            each val in [2, 3, 4, 5, 6]
+                li.list-group-item Event val
+                    .col-1.float-right Edit
+        //- ul.list-group
+        //-     li.list-group-item.active Event 1
+        //-         .col-1.float-right Edit
+        //-     li.list-group-item Event 2
+        //-         .col-1.float-right Edit
+        //-     li.list-group-item Event 3
+        //-         .col-1.float-right Edit
+        .row.pb-3
 
-    ul.list-group
-        li.list-group-item.active Event 1
-            col-1.float-right Edit
-        each val in [2, 3, 4, 5, 6]
-            li.list-group-item Event val
-                .col-1.float-right Edit
-    //- ul.list-group
-    //-     li.list-group-item.active Event 1
-    //-         .col-1.float-right Edit
-    //-     li.list-group-item Event 2
-    //-         .col-1.float-right Edit
-    //-     li.list-group-item Event 3
-    //-         .col-1.float-right Edit
-    .row.pb-3
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.js')
+    script(type='text/javascript', src='js/mdb.min.js')
+    script(src='/js/chartSettings.js')
+    script(src='/js/lineChart.js')
+
 
