--- a/views/EditEventScreen.pug
+++ b/views/EditEventScreen.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
     h1= title
-    p View and create events
+    h2 Event ID: #{eventID}
+    p View the entries for an event and edit your event's information.
 
     form(action="editEventScreen/saveEvent", method="post").form-group
         input(type="text" name="eventName" placeholder="Event Name").form-control
@@ -13,12 +14,23 @@ block content
     table.table.table-light.table-striped
         thead
             tr
-                th EVENT NAME
-                th EVENT DESCRIPTION
+
+                th START TIME
+                th END TIME
+                th ATTENDEE COUNT
+                th NOTE
+
         tbody
-            each row in eventRows
+            each row in eventsDaysRows
                 tr
-                    td #{row.NAME}
-                    TD #{row.DESCRIPTION}
+                    TD #{row.startTime}
+                    TD #{row.endTime}
+                    TD #{row.attendeeCount}
+                    TD #{row.note}
+                    TD
+                        form(action="/viewDayData/ID" method="POST")
+                            input(type="hidden" name="eventDayID" value=row.eventDayID)
+                            button(type="submit").btn.btn-secondary view
+
 
 
