--- a/views/viewDayData.pug
+++ b/views/viewDayData.pug
@@ -15,9 +15,9 @@ block content
         tbody
             each row in eventsDayEntryRows
                 tr
-                    TD #{row.timeStamp}
+                    TD #{row.timestamp}
                     TD #{row.MAC}
-                    TD #{row.wifi}
+                    TD #{row.WIFI}
 
 
 
