--- a/views/viewDayData.pug
+++ b/views/viewDayData.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-    h1= title
-    p View the data for this day of this event.
+    h1 #{eventName} #{startTime} - #{endTime}
+    p Unique Visitors
 
 
     table.table.table-light.table-striped
