--- a/views/viewDayData.pug
+++ b/views/viewDayData.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+    a(href="/mainScreen") Home
     h1 #{eventName} #{startTime} - #{endTime}
     p Unique Visitors
 
