--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
 
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='#') MarcoPolo
+      a.navbar-brand(href='#')#brand MarcoPolo
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse
