display eventdayID for event day, so you can use it in the script

--- a/views/viewDayData.pug
+++ b/views/viewDayData.pug
@@ -2,7 +2,11 @@ extends layout
 
 block content
     h1 #{eventName} #{startTime} - #{endTime}
-    p Unique Visitors
+
+    p DATAID: #{eventDayID}
+    p Use this to collect data for this event day. 
+
+    p Unique Visitors: #TODO 
 
 
     table.table.table-light.table-striped
